--- a/css/trilambs.css
+++ b/css/trilambs.css
@@ -11,7 +11,7 @@
 }
 
 .intro_title_block{
-	background-image:url('/img/background6copy.svg');
+	background-image:url('/img/trianglify6.svg');
 
 }
 
